--- a/data/viz_night_cat_match.ipynb
+++ b/data/viz_night_cat_match.ipynb
@@ -1479,6 +1479,18 @@
    "display_name": "Python [conda root]",
    "language": "python",
    "name": "conda-root-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
